--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ project(test)
 
 find_package(Threads)
 
+aux_source_directory(. ROOT_SRC)
+
 add_executable(
     ${PROJECT_NAME}
-    main.cpp
+    ROOT_SRC
 )
 
 target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
