--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ aux_source_directory(. ROOT_SRC)
 
 add_executable(
     ${PROJECT_NAME}
-    ROOT_SRC
+    ${ROOT_SRC}
 )
 
 target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
