--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(main VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-find_package(Threads REQUIRED)
+find_package(OpenCV REQUIRED)
 
 aux_source_directory(. ROOT_SRC)
 
@@ -13,9 +13,13 @@ add_executable(
     ${ROOT_SRC}
 )
 
+include_directories(
+    ${OpenCV_INCLUDE_DIRS}
+)
+
 target_link_libraries(
     ${PROJECT_NAME} 
-    ${CMAKE_THREAD_LIBS_INIT}
+    ${OpenCV_LIBS}
 )
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
